--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-boto3==1.26.83
-botocore==1.29.83
-Cython==0.29.33
-jmespath==1.0.1
-joblib==1.2.0
-natsort==8.3.1
-numpy==1.21.6
-pandas==1.1.5
-pybedtools==0.9.0
-pysam==0.20.0
-python-dateutil==2.8.2
-pytz==2022.7.1
-s3transfer==0.6.0
-scikit-learn==1.0.2
-scipy==1.7.3
-six==1.16.0
-threadpoolctl==3.1.0
-urllib3==1.26.14
+boto3>=1.26.83
+botocore>=1.29.83
+Cython>=0.29.33
+jmespath>=1.0.1
+joblib>=1.2.0
+natsort>=8.3.1
+numpy>=1.21.6
+pandas>=1.1.5
+pybedtools>=0.9.0
+pysam>=0.11.2.2
+python-dateutil>=2.8.2
+pytz>=2022.7.1
+s3transfer>=0.6.0
+scikit-learn>=1.0.2
+scipy>=1.7.3
+six>=1.16.0
+threadpoolctl>=3.1.0
+urllib3>=1.26.14
